Z scaled many of the normally distributed variables

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -164,16 +164,12 @@
     "foo = rv.binary_classification( big_df[ ['ecology'] ] )\n",
     "for col in foo.columns.values:\n",
     "    big_df[col] = foo[col]\n",
-    "big_df = big_df.drop( 'ecology', axis = 1 )\n",
-    "\n",
-    "\n",
-    "# log the area\n",
-    "big_df['area_m'] = np.log10( big_df['area_m'] )"
+    "big_df = big_df.drop( 'ecology', axis = 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -354,237 +350,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for col in scale_list:\n",
-    "    foo[col].hist( bins=20 )\n",
-    "    plt.title(col)\n",
-    "    plt.show()\n",
-    "#    print col, big_df[col].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "scale_list = [\n",
-    "'life_sq',          # L\n",
-    "'num_room',         # \n",
-    "'kitch_sq',         # L\n",
-    "'area_m',           # N\n",
-    "'children_school',  # N\n",
-    "'N_build',          # max  800, \n",
-    "'Good_build',       # N?\n",
-    "'raion_pca_0', \n",
-    "'km_pca_0', \n",
-    "'count_pca_0']\n",
+    "# log the area\n",
+    "big_df['area_m'] = np.log10( big_df['area_m'] )\n",
     "\n",
-    "log_list = ['life_sq','kitch_sq','N_build']"
+    "big_df.ix[ big_df['N_build' ] >  800, 'N_build' ] =  800\n",
+    "big_df.ix[ big_df['full_sq' ] >  700, 'full_sq' ] =  700\n",
+    "big_df.ix[ big_df['life_sq' ] >  100, 'life_sq' ] =  100\n",
+    "big_df.ix[ big_df['kitch_sq'] >   20, 'kitch_sq'] =   20\n",
+    "big_df.ix[ big_df['num_room'] >    6, 'num_room'] =    6\n",
+    "\n",
+    "log_list         = [ 'full_sq','life_sq','kitch_sq','N_build','children_school']\n",
+    "norm_sigma_upper = [ 'area_m' ]\n",
+    "\n",
+    "for col in log_list:\n",
+    "    big_df[col] = np.log10( big_df[col] + 1 )\n",
+    "    big_df[col] = rv.scale_column_sigma( big_df, col, n_sigma=3.0 )\n",
+    "    \n",
+    "for col in norm_sigma_upper:\n",
+    "    big_df[col] = rv.scale_column_sigma( big_df, col, n_sigma=3.0 )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>life_sq</th>\n",
-       "      <th>num_room</th>\n",
-       "      <th>kitch_sq</th>\n",
-       "      <th>area_m</th>\n",
-       "      <th>children_school</th>\n",
-       "      <th>N_build</th>\n",
-       "      <th>Good_build</th>\n",
-       "      <th>raion_pca_0</th>\n",
-       "      <th>km_pca_0</th>\n",
-       "      <th>count_pca_0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>27.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.806694</td>\n",
-       "      <td>10309</td>\n",
-       "      <td>211.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-0.090538</td>\n",
-       "      <td>-1.905461</td>\n",
-       "      <td>-0.044340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.981789</td>\n",
-       "      <td>7759</td>\n",
-       "      <td>245.0</td>\n",
-       "      <td>0.004082</td>\n",
-       "      <td>0.155848</td>\n",
-       "      <td>-3.563237</td>\n",
-       "      <td>0.727587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>29.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.681989</td>\n",
-       "      <td>6207</td>\n",
-       "      <td>330.0</td>\n",
-       "      <td>0.003030</td>\n",
-       "      <td>0.073719</td>\n",
-       "      <td>-3.759642</td>\n",
-       "      <td>-0.170624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>7.099803</td>\n",
-       "      <td>13670</td>\n",
-       "      <td>458.0</td>\n",
-       "      <td>0.161572</td>\n",
-       "      <td>0.320105</td>\n",
-       "      <td>0.144914</td>\n",
-       "      <td>-1.407564</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.924200</td>\n",
-       "      <td>6748</td>\n",
-       "      <td>746.0</td>\n",
-       "      <td>0.005362</td>\n",
-       "      <td>1.193787</td>\n",
-       "      <td>-4.950318</td>\n",
-       "      <td>9.796294</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   life_sq  num_room  kitch_sq    area_m  children_school  N_build  \\\n",
-       "0     27.0       2.0       6.0  6.806694            10309    211.0   \n",
-       "1     19.0       2.0       6.0  6.981789             7759    245.0   \n",
-       "2     29.0       2.0       6.0  6.681989             6207    330.0   \n",
-       "3     50.0       2.0       6.0  7.099803            13670    458.0   \n",
-       "4     77.0       2.0       6.0  6.924200             6748    746.0   \n",
-       "\n",
-       "   Good_build  raion_pca_0  km_pca_0  count_pca_0  \n",
-       "0    0.000000    -0.090538 -1.905461    -0.044340  \n",
-       "1    0.004082     0.155848 -3.563237     0.727587  \n",
-       "2    0.003030     0.073719 -3.759642    -0.170624  \n",
-       "3    0.161572     0.320105  0.144914    -1.407564  \n",
-       "4    0.005362     1.193787 -4.950318     9.796294  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big_df[ scale_list ].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "foo = big_df[ scale_list ].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "foo.ix[ foo['life_sq' ] >  100, 'life_sq' ] =  100\n",
-    "foo.ix[ foo['N_build' ] >  800, 'N_build' ] =  800\n",
-    "foo.ix[ foo['kitch_sq'] >   20, 'kitch_sq'] =   20\n",
-    "foo.ix[ foo['num_room'] >    6, 'num_room'] =    6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Good_build   -0.060685\n",
-       "Bad_build     0.060685\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -594,6 +384,59 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['id', 'timestamp', 'full_sq', 'life_sq', 'floor', 'max_floor',\n",
+       "       'build_year', 'num_room', 'kitch_sq', 'state', 'product_type',\n",
+       "       'sub_area', 'area_m', 'children_school', 'culture_objects_top_25',\n",
+       "       'N_build', 'Good_build', 'material_0.0', 'material_1.0',\n",
+       "       'material_2.0', 'material_4.0', 'material_3.0', 'material_5.0',\n",
+       "       'ecology_3', 'ecology_4', 'ecology_1', 'ecology_2', 'ecology_0',\n",
+       "       'raion_pca_0', 'km_pca_0', 'count_pca_0'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for col in big_df.columns.values[2:]:\n",
+    "    big_df[col].hist(bins=20)\n",
+    "    plt.title(col)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "state, sub_area need binarization"
+   ]
   },
   {
    "cell_type": "code",
