--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -229,65 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['id', 'timestamp', 'full_sq', 'life_sq', 'floor', 'max_floor',\n",
-       "       'build_year', 'num_room', 'kitch_sq', 'state', 'product_type',\n",
-       "       'sub_area', 'area_m', 'children_school',\n",
-       "       'school_education_centers_raion', 'healthcare_centers_raion',\n",
-       "       'culture_objects_top_25', 'big_market_raion',\n",
-       "       'nuclear_reactor_raion', 'detention_facility_raion',\n",
-       "       'kindergarten_km', 'school_km', 'park_km', 'green_zone_km',\n",
-       "       'industrial_km', 'water_treatment_km', 'cemetery_km',\n",
-       "       'incineration_km', 'public_transport_station_km', 'water_km',\n",
-       "       'mkad_km', 'ttk_km', 'sadovoe_km', 'bulvar_ring_km', 'kremlin_km',\n",
-       "       'big_road1_km', 'big_road2_km', 'railroad_km', 'zd_vokzaly_avto_km',\n",
-       "       'bus_terminal_avto_km', 'oil_chemistry_km', 'nuclear_reactor_km',\n",
-       "       'radiation_km', 'power_transmission_line_km',\n",
-       "       'thermal_power_plant_km', 'ts_km', 'big_market_km',\n",
-       "       'market_shop_km', 'fitness_km', 'swim_pool_km', 'ice_rink_km',\n",
-       "       'stadium_km', 'basketball_km', 'hospice_morgue_km',\n",
-       "       'detention_facility_km', 'public_healthcare_km', 'university_km',\n",
-       "       'workplaces_km', 'shopping_centers_km', 'office_km',\n",
-       "       'additional_education_km', 'big_church_km', 'church_synagogue_km',\n",
-       "       'mosque_km', 'theater_km', 'museum_km', 'exhibition_km',\n",
-       "       'catering_km', 'trc_count_5000', 'big_church_count_5000',\n",
-       "       'church_count_5000', 'mosque_count_5000', 'leisure_count_5000',\n",
-       "       'sport_count_5000', 'market_count_5000', 'N_build', 'Good_build',\n",
-       "       'Bad_build', 'material_0.0', 'material_1.0', 'material_2.0',\n",
-       "       'material_4.0', 'material_3.0', 'material_5.0', 'ecology_3',\n",
-       "       'ecology_2', 'ecology_4', 'ecology_0', 'ecology_1',\n",
-       "       'cafe_count_5000', 'cafe_count_5000_price_high'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big_df.columns.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -312,45 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['id', 'timestamp', 'full_sq', 'life_sq', 'floor', 'max_floor',\n",
-       "       'build_year', 'num_room', 'kitch_sq', 'state', 'product_type',\n",
-       "       'sub_area', 'area_m', 'children_school', 'culture_objects_top_25',\n",
-       "       'N_build', 'Good_build', 'material_0.0', 'material_1.0',\n",
-       "       'material_2.0', 'material_4.0', 'material_3.0', 'material_5.0',\n",
-       "       'ecology_3', 'ecology_4', 'ecology_1', 'ecology_2', 'ecology_0',\n",
-       "       'raion_pca_0', 'km_pca_0', 'count_pca_0'], dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big_df.columns.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -378,6 +282,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ordered_list = ['id', 'timestamp', 'full_sq', 'life_sq', 'floor', 'max_floor', 'build_year', 'num_room', 'kitch_sq', 'product_type',\n",
+    "                'state', 'area_m', 'children_school', 'culture_objects_top_25', 'N_build', 'Good_build', \n",
+    "                'raion_pca_0', 'km_pca_0', 'count_pca_0',\n",
+    "                'material_0.0', 'material_1.0', 'material_2.0', 'material_3.0', 'material_4.0', 'material_5.0',\n",
+    "                'ecology_0', 'ecology_1', 'ecology_2', 'ecology_3', 'ecology_4']\n",
+    "\n",
+    "binarize_list = ['state','sub_area']\n",
+    "\n",
+    "foo = big_df[binarize_list].copy()\n",
+    "bar = rv.binary_classification( foo, ignore='state', upperLim=200 )\n",
+    "\n",
+    "big_df = big_df[ordered_list]\n",
+    "\n",
+    "for i in range( 0, 146 ):\n",
+    "    col = 'sub_area_'+str(i)    \n",
+    "    big_df[col] = bar[col]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -387,7 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -396,15 +335,51 @@
      "data": {
       "text/plain": [
        "array(['id', 'timestamp', 'full_sq', 'life_sq', 'floor', 'max_floor',\n",
-       "       'build_year', 'num_room', 'kitch_sq', 'state', 'product_type',\n",
-       "       'sub_area', 'area_m', 'children_school', 'culture_objects_top_25',\n",
-       "       'N_build', 'Good_build', 'material_0.0', 'material_1.0',\n",
-       "       'material_2.0', 'material_4.0', 'material_3.0', 'material_5.0',\n",
-       "       'ecology_3', 'ecology_4', 'ecology_1', 'ecology_2', 'ecology_0',\n",
-       "       'raion_pca_0', 'km_pca_0', 'count_pca_0'], dtype=object)"
+       "       'build_year', 'num_room', 'kitch_sq', 'product_type', 'state',\n",
+       "       'area_m', 'children_school', 'culture_objects_top_25', 'N_build',\n",
+       "       'Good_build', 'raion_pca_0', 'km_pca_0', 'count_pca_0',\n",
+       "       'material_0.0', 'material_1.0', 'material_2.0', 'material_3.0',\n",
+       "       'material_4.0', 'material_5.0', 'ecology_0', 'ecology_1',\n",
+       "       'ecology_2', 'ecology_3', 'ecology_4', 'sub_area_0', 'sub_area_1',\n",
+       "       'sub_area_2', 'sub_area_3', 'sub_area_4', 'sub_area_5',\n",
+       "       'sub_area_6', 'sub_area_7', 'sub_area_8', 'sub_area_9',\n",
+       "       'sub_area_10', 'sub_area_11', 'sub_area_12', 'sub_area_13',\n",
+       "       'sub_area_14', 'sub_area_15', 'sub_area_16', 'sub_area_17',\n",
+       "       'sub_area_18', 'sub_area_19', 'sub_area_20', 'sub_area_21',\n",
+       "       'sub_area_22', 'sub_area_23', 'sub_area_24', 'sub_area_25',\n",
+       "       'sub_area_26', 'sub_area_27', 'sub_area_28', 'sub_area_29',\n",
+       "       'sub_area_30', 'sub_area_31', 'sub_area_32', 'sub_area_33',\n",
+       "       'sub_area_34', 'sub_area_35', 'sub_area_36', 'sub_area_37',\n",
+       "       'sub_area_38', 'sub_area_39', 'sub_area_40', 'sub_area_41',\n",
+       "       'sub_area_42', 'sub_area_43', 'sub_area_44', 'sub_area_45',\n",
+       "       'sub_area_46', 'sub_area_47', 'sub_area_48', 'sub_area_49',\n",
+       "       'sub_area_50', 'sub_area_51', 'sub_area_52', 'sub_area_53',\n",
+       "       'sub_area_54', 'sub_area_55', 'sub_area_56', 'sub_area_57',\n",
+       "       'sub_area_58', 'sub_area_59', 'sub_area_60', 'sub_area_61',\n",
+       "       'sub_area_62', 'sub_area_63', 'sub_area_64', 'sub_area_65',\n",
+       "       'sub_area_66', 'sub_area_67', 'sub_area_68', 'sub_area_69',\n",
+       "       'sub_area_70', 'sub_area_71', 'sub_area_72', 'sub_area_73',\n",
+       "       'sub_area_74', 'sub_area_75', 'sub_area_76', 'sub_area_77',\n",
+       "       'sub_area_78', 'sub_area_79', 'sub_area_80', 'sub_area_81',\n",
+       "       'sub_area_82', 'sub_area_83', 'sub_area_84', 'sub_area_85',\n",
+       "       'sub_area_86', 'sub_area_87', 'sub_area_88', 'sub_area_89',\n",
+       "       'sub_area_90', 'sub_area_91', 'sub_area_92', 'sub_area_93',\n",
+       "       'sub_area_94', 'sub_area_95', 'sub_area_96', 'sub_area_97',\n",
+       "       'sub_area_98', 'sub_area_99', 'sub_area_100', 'sub_area_101',\n",
+       "       'sub_area_102', 'sub_area_103', 'sub_area_104', 'sub_area_105',\n",
+       "       'sub_area_106', 'sub_area_107', 'sub_area_108', 'sub_area_109',\n",
+       "       'sub_area_110', 'sub_area_111', 'sub_area_112', 'sub_area_113',\n",
+       "       'sub_area_114', 'sub_area_115', 'sub_area_116', 'sub_area_117',\n",
+       "       'sub_area_118', 'sub_area_119', 'sub_area_120', 'sub_area_121',\n",
+       "       'sub_area_122', 'sub_area_123', 'sub_area_124', 'sub_area_125',\n",
+       "       'sub_area_126', 'sub_area_127', 'sub_area_128', 'sub_area_129',\n",
+       "       'sub_area_130', 'sub_area_131', 'sub_area_132', 'sub_area_133',\n",
+       "       'sub_area_134', 'sub_area_135', 'sub_area_136', 'sub_area_137',\n",
+       "       'sub_area_138', 'sub_area_139', 'sub_area_140', 'sub_area_141',\n",
+       "       'sub_area_142', 'sub_area_143', 'sub_area_144', 'sub_area_145'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,28 +390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for col in big_df.columns.values[2:]:\n",
-    "    big_df[col].hist(bins=20)\n",
-    "    plt.title(col)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "state, sub_area need binarization"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
