Learning function set up to read from visualization, and just learn

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -984,15 +984,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_sq</th>\n",
+       "      <th>life_sq</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>max_floor</th>\n",
+       "      <th>build_year</th>\n",
+       "      <th>num_room</th>\n",
+       "      <th>kitch_sq</th>\n",
+       "      <th>product_type</th>\n",
+       "      <th>state</th>\n",
+       "      <th>area_m</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sub_area_142</th>\n",
+       "      <th>sub_area_143</th>\n",
+       "      <th>sub_area_144</th>\n",
+       "      <th>sub_area_145</th>\n",
+       "      <th>economy_pca_0</th>\n",
+       "      <th>economy_pca_1</th>\n",
+       "      <th>economy_pca_2</th>\n",
+       "      <th>economy_pca_3</th>\n",
+       "      <th>economy_pca_4</th>\n",
+       "      <th>economy_pca_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.478974</td>\n",
+       "      <td>-0.230602</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1890.542762</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.262875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.778320</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.339423</td>\n",
+       "      <td>-2.483083</td>\n",
+       "      <td>-2.359179</td>\n",
+       "      <td>2.115526</td>\n",
+       "      <td>0.497562</td>\n",
+       "      <td>-0.504460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.164398</td>\n",
+       "      <td>-1.019313</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1890.542762</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.262875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.273679</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.340430</td>\n",
+       "      <td>-2.478756</td>\n",
+       "      <td>-2.371841</td>\n",
+       "      <td>2.120667</td>\n",
+       "      <td>0.498366</td>\n",
+       "      <td>-0.498004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.478974</td>\n",
+       "      <td>-0.068879</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1890.542762</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.262875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.137734</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.332142</td>\n",
+       "      <td>-2.467574</td>\n",
+       "      <td>-2.363300</td>\n",
+       "      <td>2.139086</td>\n",
+       "      <td>0.501655</td>\n",
+       "      <td>-0.518096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.664444</td>\n",
+       "      <td>1.174946</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1890.542762</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.262875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.066451</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.715622</td>\n",
+       "      <td>-2.715521</td>\n",
+       "      <td>-1.499621</td>\n",
+       "      <td>1.731055</td>\n",
+       "      <td>0.450541</td>\n",
+       "      <td>-1.242619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.235829</td>\n",
+       "      <td>2.170898</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1890.542762</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.262875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.439656</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.788533</td>\n",
+       "      <td>-2.763121</td>\n",
+       "      <td>-1.416298</td>\n",
+       "      <td>1.832458</td>\n",
+       "      <td>-0.280432</td>\n",
+       "      <td>-1.107219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 180 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    full_sq   life_sq  floor  max_floor   build_year  num_room  kitch_sq  \\\n",
+       "0 -0.478974 -0.230602    3.0        3.0  1890.542762       2.0  0.262875   \n",
+       "1 -1.164398 -1.019313    3.0        3.0  1890.542762       2.0  0.262875   \n",
+       "2 -0.478974 -0.068879    2.0        2.0  1890.542762       2.0  0.262875   \n",
+       "3  1.664444  1.174946    4.0        4.0  1890.542762       2.0  0.262875   \n",
+       "4  1.235829  2.170898    3.0        3.0  1890.542762       2.0  0.262875   \n",
+       "\n",
+       "   product_type  state    area_m      ...        sub_area_142  sub_area_143  \\\n",
+       "0           0.0    0.0 -0.778320      ...                   0             0   \n",
+       "1           0.0    0.0 -0.273679      ...                   0             0   \n",
+       "2           0.0    0.0 -1.137734      ...                   0             0   \n",
+       "3           0.0    0.0  0.066451      ...                   0             0   \n",
+       "4           0.0    0.0 -0.439656      ...                   0             0   \n",
+       "\n",
+       "   sub_area_144  sub_area_145  economy_pca_0  economy_pca_1  economy_pca_2  \\\n",
+       "0             0             0       4.339423      -2.483083      -2.359179   \n",
+       "1             0             0       4.340430      -2.478756      -2.371841   \n",
+       "2             0             0       4.332142      -2.467574      -2.363300   \n",
+       "3             0             0       3.715622      -2.715521      -1.499621   \n",
+       "4             0             0       3.788533      -2.763121      -1.416298   \n",
+       "\n",
+       "   economy_pca_3  economy_pca_4  economy_pca_5  \n",
+       "0       2.115526       0.497562      -0.504460  \n",
+       "1       2.120667       0.498366      -0.498004  \n",
+       "2       2.139086       0.501655      -0.518096  \n",
+       "3       1.731055       0.450541      -1.242619  \n",
+       "4       1.832458      -0.280432      -1.107219  \n",
+       "\n",
+       "[5 rows x 180 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "out_df.iloc[0:30471].to_csv( 'train_mod.csv' )\n",
-    "out_df.iloc[30471: ].to_csv(  'test_mod.csv' )\n",
-    "target_price        .to_csv(     'price.csv' )"
+    "out_df.iloc[0:30471]   .to_csv( 'train_mod.csv' )\n",
+    "out_df.iloc[30471: ]   .to_csv(  'test_mod.csv' )\n",
+    "target_price.to_frame().to_csv(     'price.csv' )"
    ]
   },
   {
