CLF optimizer now will ignore redundant parameters.

--- a/Economy.ipynb
+++ b/Economy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['timestamp', 'oil_urals', 'gdp_quart', 'gdp_quart_growth', 'cpi',\n",
+       "       'ppi', 'gdp_deflator', 'balance_trade', 'balance_trade_growth',\n",
+       "       'usdrub', 'eurrub', 'brent', 'net_capital_export', 'gdp_annual',\n",
+       "       'gdp_annual_growth', 'average_provision_of_build_contract',\n",
+       "       'average_provision_of_build_contract_moscow', 'rts', 'micex',\n",
+       "       'micex_rgbi_tr', 'micex_cbi_tr', 'deposits_value',\n",
+       "       'deposits_growth', 'deposits_rate', 'mortgage_value',\n",
+       "       'mortgage_growth', 'mortgage_rate', 'grp', 'grp_growth',\n",
+       "       'income_per_cap', 'real_dispos_income_per_cap_growth', 'salary',\n",
+       "       'salary_growth', 'fixed_basket', 'retail_trade_turnover',\n",
+       "       'retail_trade_turnover_per_cap', 'retail_trade_turnover_growth',\n",
+       "       'labor_force', 'unemployment', 'employment',\n",
+       "       'invest_fixed_capital_per_cap', 'invest_fixed_assets',\n",
+       "       'profitable_enterpr_share', 'unprofitable_enterpr_share',\n",
+       "       'share_own_revenues', 'overdue_wages_per_cap', 'fin_res_per_cap',\n",
+       "       'marriages_per_1000_cap', 'divorce_rate', 'construction_value',\n",
+       "       'invest_fixed_assets_phys', 'pop_natural_increase', 'pop_migration',\n",
+       "       'pop_total_inc', 'childbirth', 'mortality', 'housing_fund_sqm',\n",
+       "       'lodging_sqm_per_cap', 'water_pipes_share', 'baths_share',\n",
+       "       'sewerage_share', 'gas_share', 'hot_water_share',\n",
+       "       'electric_stove_share', 'heating_share', 'old_house_share',\n",
+       "       'average_life_exp', 'infant_mortarity_per_1000_cap',\n",
+       "       'perinatal_mort_per_1000_cap', 'incidence_population',\n",
+       "       'rent_price_4+room_bus', 'rent_price_3room_bus',\n",
+       "       'rent_price_2room_bus', 'rent_price_1room_bus',\n",
+       "       'rent_price_3room_eco', 'rent_price_2room_eco',\n",
+       "       'rent_price_1room_eco', 'load_of_teachers_preschool_per_teacher',\n",
+       "       'child_on_acc_pre_school', 'load_of_teachers_school_per_teacher',\n",
+       "       'students_state_oneshift', 'modern_education_share',\n",
+       "       'old_education_build_share', 'provision_doctors', 'provision_nurse',\n",
+       "       'load_on_doctors', 'power_clinics',\n",
+       "       'hospital_beds_available_per_cap',\n",
+       "       'hospital_bed_occupancy_per_year', 'provision_retail_space_sqm',\n",
+       "       'provision_retail_space_modern_sqm', 'turnover_catering_per_cap',\n",
+       "       'theaters_viewers_per_1000_cap',\n",
+       "       'seats_theather_rfmin_per_100000_cap', 'museum_visitis_per_100_cap',\n",
+       "       'bandwidth_sports', 'population_reg_sports_share',\n",
+       "       'students_reg_sports_share', 'apartment_build', 'apartment_fund_sqm'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -282,9 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -346,7 +405,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -573,7 +632,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -613,7 +672,7 @@
        "       'seats_theather_rfmin_per_100000_cap'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -636,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -652,10 +711,11 @@
     "balance_list = ['balance_trade','balance_trade_growth']\n",
     "\n",
     "\n",
-    "\n",
+    "# General economic markers\n",
     "eco_list = gdp_list + pi_list + balance_list\n",
     "\n",
-    "#dv.corr_plot( my_df[eco_list] )"
+    "\n",
+    "dv.corr_plot( my_df[eco_list] )"
    ]
   },
   {
@@ -668,12 +728,12 @@
    "source": [
     "foo = my_df[eco_list].copy()\n",
     "for col in eco_list:\n",
-    "#    f, ax = plt.subplots(ncols=2)\n",
-    "#    foo[col].hist(bins=20,ax=ax[0])\n",
-    "    foo[col] = smart_scale( foo, col )\n",
-    "#    foo[col].hist(bins=20,ax=ax[1])\n",
-    "#    plt.title(col)\n",
-    "#    plt.show()"
+    "    f, ax = plt.subplots(ncols=2)\n",
+    "    foo[col].hist(bins=20,ax=ax[0])\n",
+    "    foo[col] = rv.scale_column_sigma( foo, col )\n",
+    "    foo[col].hist(bins=20,ax=ax[1])\n",
+    "    plt.title(col)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -698,6 +758,7 @@
     "invest_list = ['invest_fixed_capital_per_cap','invest_fixed_assets']\n",
     "\n",
     "\n",
+    "# Stock markets and investing\n",
     "mark_list = rub_list + micex_list + banking_list + invest_list\n",
     "\n",
     "#dv.corr_plot( my_df[mark_list] )"
@@ -713,12 +774,12 @@
    "source": [
     "foo = my_df[mark_list].copy()\n",
     "for col in mark_list:\n",
-    "#    f, ax = plt.subplots(ncols=2)\n",
-    "#    foo[col].hist(bins=20,ax=ax[0])\n",
-    "    foo[col] = rv.smart_scale( foo, col )\n",
-    "#    foo[col].hist(bins=20,ax=ax[1])\n",
-    "#    plt.title(col)\n",
-    "#    plt.show()"
+    "    f, ax = plt.subplots(ncols=2)\n",
+    "    foo[col].hist(bins=20,ax=ax[0])\n",
+    "    foo[col] = rv.scale_column_sigma( foo, col )\n",
+    "    foo[col].hist(bins=20,ax=ax[1])\n",
+    "    plt.title(col)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -748,6 +809,7 @@
     "misc_list = ['oil_urals','turnover_catering_per_cap','seats_theather_rfmin_per_100000_cap']\n",
     "\n",
     "\n",
+    "# Some miscellaneous markers\n",
     "buy_list = build_list + retail_list + misc_list\n",
     "\n",
     "#dv.corr_plot( my_df[buy_list] )"
@@ -763,12 +825,12 @@
    "source": [
     "foo = my_df[buy_list].copy()\n",
     "for col in buy_list:\n",
-    "#    f, ax = plt.subplots(ncols=2)\n",
-    "#    foo[col].hist(bins=20,ax=ax[0])\n",
-    "    foo[col] = rv.smart_scale( foo, col )\n",
-    "#    foo[col].hist(bins=20,ax=ax[1])\n",
-    "#    plt.title(col)\n",
-    "#    plt.show()"
+    "    f, ax = plt.subplots(ncols=2)\n",
+    "    foo[col].hist(bins=20,ax=ax[0])\n",
+    "    foo[col] = rv.scale_column_sigma( foo, col )\n",
+    "    foo[col].hist(bins=20,ax=ax[1])\n",
+    "    plt.title(col)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -789,6 +851,7 @@
     "             'rent_price_3room_eco', 'rent_price_2room_eco', 'rent_price_1room_eco']\n",
     "\n",
     "\n",
+    "# Individual level effects\n",
     "peep_list = personal_list + rent_list\n",
     "\n",
     "#dv.corr_plot( my_df[personal_list] )\n",
@@ -797,51 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "income_per_cap\n",
-      "salary\n",
-      "labor_force\n",
-      "unemployment\n",
-      "employment\n",
-      "pop_natural_increase\n",
-      "childbirth\n",
-      "mortality\n",
-      "average_life_exp\n",
-      "provision_nurse\n",
-      "load_on_doctors\n",
-      "rent_price_4+room_bus\n",
-      "rent_price_3room_bus\n",
-      "rent_price_2room_bus\n",
-      "rent_price_1room_bus\n",
-      "rent_price_3room_eco\n",
-      "rent_price_2room_eco\n",
-      "rent_price_1room_eco\n"
-     ]
-    }
-   ],
-   "source": [
-    "foo = my_df[peep_list].copy()\n",
-    "for col in peep_list:\n",
-    "#    f, ax = plt.subplots(ncols=2)\n",
-    "#    foo[col].hist(bins=20,ax=ax[0])\n",
-    "    print col\n",
-    "    foo[col] = rv.smart_scale( foo, col )\n",
-    "#    foo[col].hist(bins=20,ax=ax[1])\n",
-    "#    plt.title(col)\n",
-    "#    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -866,16 +885,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gdp_quart\n",
+      "cpi\n",
+      "ppi\n",
+      "balance_trade\n",
+      "balance_trade_growth\n",
+      "deposits_growth\n",
+      "mortgage_rate\n",
+      "average_provision_of_build_contract\n",
+      "seats_theather_rfmin_per_100000_cap\n",
+      "income_per_cap\n",
+      "rent_price_4+room_bus\n",
+      "rent_price_3room_bus\n",
+      "rent_price_2room_bus\n",
+      "rent_price_1room_bus\n",
+      "rent_price_3room_eco\n",
+      "rent_price_2room_eco\n",
+      "rent_price_1room_eco\n"
+     ]
+    }
+   ],
    "source": [
     "# resume 27\n",
     "norm_df = my_df[smart].copy()\n",
     "for col in smart:\n",
-    "    norm_df[ col ] = rv.smart_scale( my_df, col, show_plot=False )\n",
+    "    print col\n",
+    "    norm_df[ col ] = rv.smart_scale( my_df, col, show_plot=True )\n",
     "for col in scale:\n",
     "    norm_df[ col ] = rv.scale_column_sigma( my_df, col )"
    ]
@@ -904,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -935,8 +979,8 @@
       "      dtype='object')\n",
       "\n",
       "Using  6  components, variance ratio:\n",
-      "[ 0.51181077  0.15581016  0.06848566  0.04922456  0.04385443  0.02895799]\n",
-      "Total explained variance:  0.858143572906\n",
+      "[ 0.51181077  0.15581016  0.06848566  0.04922456  0.04385443  0.028958  ]\n",
+      "Total explained variance:  0.858143573807\n",
       "\n",
       "New columns:\n",
       "['economy_pca_0', 'economy_pca_1', 'economy_pca_2', 'economy_pca_3', 'economy_pca_4', 'economy_pca_5']\n"
@@ -949,9 +993,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -974,47 +1019,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>11.509154</td>\n",
-       "      <td>2.094981</td>\n",
-       "      <td>2.707482</td>\n",
-       "      <td>-1.691901</td>\n",
-       "      <td>1.455286</td>\n",
-       "      <td>0.333718</td>\n",
+       "      <td>2.094980</td>\n",
+       "      <td>2.707483</td>\n",
+       "      <td>-1.691899</td>\n",
+       "      <td>1.455284</td>\n",
+       "      <td>0.333687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>11.509154</td>\n",
-       "      <td>2.094981</td>\n",
-       "      <td>2.707482</td>\n",
-       "      <td>-1.691901</td>\n",
-       "      <td>1.455286</td>\n",
-       "      <td>0.333718</td>\n",
+       "      <td>2.094980</td>\n",
+       "      <td>2.707483</td>\n",
+       "      <td>-1.691899</td>\n",
+       "      <td>1.455284</td>\n",
+       "      <td>0.333687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>11.495083</td>\n",
        "      <td>2.104226</td>\n",
        "      <td>2.705919</td>\n",
-       "      <td>-1.692394</td>\n",
-       "      <td>1.456099</td>\n",
-       "      <td>0.339611</td>\n",
+       "      <td>-1.692392</td>\n",
+       "      <td>1.456097</td>\n",
+       "      <td>0.339580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>11.475922</td>\n",
        "      <td>2.116818</td>\n",
        "      <td>2.703790</td>\n",
-       "      <td>-1.693065</td>\n",
-       "      <td>1.457207</td>\n",
-       "      <td>0.347636</td>\n",
+       "      <td>-1.693064</td>\n",
+       "      <td>1.457205</td>\n",
+       "      <td>0.347605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>11.480380</td>\n",
        "      <td>2.111180</td>\n",
-       "      <td>2.701421</td>\n",
-       "      <td>-1.694002</td>\n",
-       "      <td>1.457837</td>\n",
-       "      <td>0.349619</td>\n",
+       "      <td>2.701422</td>\n",
+       "      <td>-1.694001</td>\n",
+       "      <td>1.457836</td>\n",
+       "      <td>0.349587</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1022,21 +1067,21 @@
       ],
       "text/plain": [
        "   economy_pca_0  economy_pca_1  economy_pca_2  economy_pca_3  economy_pca_4  \\\n",
-       "0      11.509154       2.094981       2.707482      -1.691901       1.455286   \n",
-       "1      11.509154       2.094981       2.707482      -1.691901       1.455286   \n",
-       "2      11.495083       2.104226       2.705919      -1.692394       1.456099   \n",
-       "3      11.475922       2.116818       2.703790      -1.693065       1.457207   \n",
-       "4      11.480380       2.111180       2.701421      -1.694002       1.457837   \n",
+       "0      11.509154       2.094980       2.707483      -1.691899       1.455284   \n",
+       "1      11.509154       2.094980       2.707483      -1.691899       1.455284   \n",
+       "2      11.495083       2.104226       2.705919      -1.692392       1.456097   \n",
+       "3      11.475922       2.116818       2.703790      -1.693064       1.457205   \n",
+       "4      11.480380       2.111180       2.701422      -1.694001       1.457836   \n",
        "\n",
        "   economy_pca_5  \n",
-       "0       0.333718  \n",
-       "1       0.333718  \n",
-       "2       0.339611  \n",
-       "3       0.347636  \n",
-       "4       0.349619  "
+       "0       0.333687  \n",
+       "1       0.333687  \n",
+       "2       0.339580  \n",
+       "3       0.347605  \n",
+       "4       0.349587  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,39 +1092,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4237c6ab50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f42373b2f50>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4236b8b1d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4231263210>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f42377f5c10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4231af0f50>]], dtype=object)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "economy_pca.hist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
+    "economy_pca.hist()\n",
     "plt.show()"
    ]
   },
