--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -130,6 +130,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "big_df['build_year'].hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
@@ -140,17 +151,18 @@
     "# Otherwise, use material to estimate a year\n",
     "# Still outlying? Toss in the new mean\n",
     "big_df   [                              'build_year' ] = big_df['build_year'].replace( {2.00520090e+07:2007} ) # Typo?\n",
-    "big_df.ix[ big_df['build_year'] < 1000, 'build_year' ] = big_df['build_year'].mean()\n",
-    "big_df.ix[ big_df['build_year'] > 2017, 'build_year' ] = big_df['build_year'].mean()\n",
+    "big_df.ix[ big_df['build_year'] < 1000, 'build_year' ] = big_df['build_year'].median()\n",
+    "big_df.ix[ big_df['build_year'] > 2017, 'build_year' ] = big_df['build_year'].median()\n",
     "\n",
     "\n",
     "# If build year missing, fill in based on number of floors in building, was decent trend\n",
     "for floor in big_df['max_floor'].unique():\n",
-    "    mean = big_df.ix[ big_df['max_floor'] == floor, 'build_year' ].mean()\n",
-    "    big_df.ix[ big_df['max_floor'] == floor, 'build_year' ] = big_df.ix[ big_df['max_floor'] == floor, 'build_year' ].fillna( mean )\n",
+    "    median = big_df.ix[ big_df['max_floor'] == floor, 'build_year' ].median()\n",
+    "    big_df         .ix[ big_df['max_floor'] == floor, 'build_year' ] = \\\n",
+    "    big_df         .ix[ big_df['max_floor'] == floor, 'build_year' ].fillna( median )\n",
     "    \n",
     "# If don't know build year, assume somewhere in middle\n",
-    "big_df['build_year'] = big_df['build_year'].fillna( big_df['build_year'].mean() )"
+    "big_df['build_year'] = big_df['build_year'].fillna( big_df['build_year'].median() )"
    ]
   },
   {
@@ -161,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "# Put floors in categorical range\n",
+    "# Put floors in categorical range, 0 & 1 unchanged, then rough building classifications\n",
     "for flr in ['floor','max_floor']:\n",
     "    big_df.ix[ (big_df[flr] >  2) & (big_df[flr] <=  5), flr ] = 3\n",
     "    big_df.ix[ (big_df[flr] >  5) & (big_df[flr] <= 10), flr ] = 4\n",
